Added page styling and basic text content

--- a/test-page/index.html
+++ b/test-page/index.html
@@ -4,10 +4,20 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
+		<script type="module" src="main.js"></script>
 		<title>Three.js Test</title>
 	</head>
 	<body>
 		<canvas class="webgl"></canvas>
-		<script type="module" src="main.js"></script>
+		<h1>Hi, I'm Martin</h1>
+		<p class="intro">Welcome to my world!</p>
+		<h2>About Me</h2>
+		<p class="about">
+			I'm a software engineer, who has recently taken the leap from physical
+			product development engineering to software engineering.
+			<br />
+			Previously, I have worked as a 3D CAD Product Design Engineer, with
+			extensive experience in the magnetics & fluid processing industries.
+		</p>
 	</body>
 </html>
