Added fade-in effects on page load

--- a/test-page/index.html
+++ b/test-page/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="A Spinning Planet and Personal Information"
+		/>
 		<link rel="stylesheet" href="style.css" />
 		<script type="module" src="main.js"></script>
 		<title>Three.js Test</title>
