mapped earth image to sphere

--- a/test-page/index.html
+++ b/test-page/index.html
@@ -17,11 +17,12 @@
 		<p class="intro">Welcome to my world!</p>
 		<h2>About Me</h2>
 		<p class="about">
-			I'm a software engineer, who has recently taken the leap from physical
-			product development engineering to software engineering.
+			I'm a software developer, who has recently taken the leap from physical
+			engineering to software engineering.
 			<br />
-			Previously, I have worked as a 3D CAD Product Design Engineer, with
-			extensive experience in the magnetics & fluid processing industries.
+			<br />
+			I have extensive experience as a 3D CAD Product Design Engineer, working
+			in the magnetics & fluid processing industries.
 		</p>
 	</body>
 </html>
